# data-cleaning-toolkit

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cleaning-report-v1.md  public-api.md  reproducibility.md
examples/: conditional_presence_demo.csv  conditional_presence_schema.json  cross_column_demo.csv  cross_column_schema.json  customer_schema.json  demo_dirty.csv  mapping_coverage_demo.csv  mapping_coverage_schema.json  privacy_modes_demo.csv  privacy_modes_schema.json  public_api_demo.py  run_demo.py  schema_suggestion_demo.csv  schema_suggestion_expected.json  unmatched_frequency_demo.csv  unmatched_frequency_schema.json  value_mapping_demo.csv  value_mapping_schema.json
results/: README.md  checksums.sha256  conditional_presence_clean.csv  conditional_presence_report.json  cross_column_clean.csv  cross_column_report.json  demo_clean.csv  demo_cleaning_report.json  demo_inspection.json  demo_schema_suggestion.json  mapping_coverage_clean.csv  mapping_coverage_report.json  privacy_modes_clean.csv  privacy_modes_report.json  unmatched_frequency_clean.csv  unmatched_frequency_report.json  value_mapping_clean.csv  value_mapping_report.json
src/data_cleaning_toolkit/: __init__.py  cleaning.py  cli.py  csv_table.py  inspection.py  models.py  reporting.py  schema.py  suggestion.py
tests/: test_cleaning.py  test_cli.py  test_conditional_presence.py  test_cross_column.py  test_csv_table.py  test_mapping_coverage.py  test_public_api.py  test_release_contract.py  test_reproducibility.py  test_schema.py  test_suggestion.py
