[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-toolkit"
version = "0.6.0"
description = "Deterministic CSV inspection, schema suggestion, and rule-driven cleaning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "cab0a" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/cab0a/data-cleaning-toolkit"
Issues = "https://github.com/cab0a/data-cleaning-toolkit/issues"

[project.scripts]
data-cleaning-toolkit = "data_cleaning_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
